updated pom ready for release via sonatype

--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+    	<groupId>org.sonatype.oss</groupId>
+    	<artifactId>oss-parent</artifactId>
+    	<version>7</version>
+  	</parent>
+	
 	<name>mobile-detect</name>
-	<groupId>au.com.flyingkite.mobiledetect</groupId>
+	<groupId>au.com.flyingkite</groupId>
 	<artifactId>mobiledetect</artifactId>
-	<description>A lightweight Java library for detecting mobile devices.</description>
-		
-	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	
+	<description>A lightweight Java library for detecting mobile devices.</description>
+	<url>https://github.com/steveswinsburg/mobile-detect</url>
 	
 	<organization>
         <name>Flying Kite Pty Ltd</name>
@@ -65,7 +73,8 @@
 	
     <build>
         <plugins>
-            <plugin>
+			<!-- ensure license headers -->
+			<plugin>
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
                 <version>1.8.0</version>
@@ -115,7 +124,48 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-            
+			
+			<!-- release plugin, special setup for gpg signing -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.2.1</version>
+				<configuration>
+					<mavenExecutorId>forked-path</mavenExecutorId>
+				</configuration>
+			</plugin>
+			
         </plugins>
     </build>
+    
+    <!-- release profile to sign the artifacts -->
+	<profiles>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
