--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<name>mobile-detect</name>
 	<groupId>au.com.flyingkite</groupId>
 	<artifactId>mobiledetect</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 	
 	<description>A lightweight Java library for detecting mobile devices.</description>
