--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
+	<dependencies>
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+            <scope>test</scope>
+        </dependency>
+	</dependencies>
+	
     <build>
         <plugins>
 			<!-- ensure license headers -->
@@ -96,8 +105,8 @@
                     <useDefaultExcludes>true</useDefaultExcludes>
                     <useDefaultMapping>true</useDefaultMapping>
                     <properties>
-                        <year>${project.inceptionYear}-2011</year>
-                        <original>Anthony Hand, 2010-2011</original>
+                        <year>${project.inceptionYear}-2012</year>
+                        <original>Anthony Hand, 2010-2012</original>
                         <holder>Flying Kite Pty Ltd</holder>
                     </properties>
                     <encoding>UTF-8</encoding>
@@ -135,6 +144,13 @@
 					<mavenExecutorId>forked-path</mavenExecutorId>
 				</configuration>
 			</plugin>
+			
+			 <!-- unit testing -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.8</version>
+            </plugin>
 			
         </plugins>
     </build>
